--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,7 +1,15 @@
-button {
-  color: white;
-  border-radius: 4px;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-  background: rgb(66, 184, 221);
-  font-size: 20px;
+  .primary-button {
+    border-radius: 4px;
+    color: #fff;
+    background-color: #337ab7;
+    border-color: #2e6da4;
+    font-size: 20px;
+  }
+
+  .secondary-button {
+    border-radius: 4px;
+    color: #fff;
+    background: #7f19e6;
+    border-color: #7f19e6;
+    font-size: 20px;
   }
